# calix-ai

./: .gitignore
.claude/: CLAUDE.md
ai-engine/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
ai-engine/.claude/: CLAUDE.md
ai-engine/app/: main.py
ai-engine/app/api/: dependencies.py
ai-engine/app/api/v1/: router.py
ai-engine/app/api/v1/endpoints/: health.py  stocks.py
ai-engine/app/config/: settings.py
ai-engine/app/core/: errors.py  logging.py
ai-engine/app/schemas/: base.py  stock.py
ai-engine/app/services/: stock_service.py
ai-engine/tests/: conftest.py
ai-engine/tests/test_api/test_v1/: test_health.py  test_stocks.py
core-backend/: build.gradle.kts  gradle.properties  settings.gradle.kts
core-backend/.claude/: CLAUDE.md
core-backend/.claude/docs/changes/: 20260107_crawling-etl-phase1.md  20260107_spring-boot-upgrade.md  20260108_logback-configuration.md
core-backend/.claude/plans/: 20260106_233103_spring-boot-upgrade.md  20260107_234716_crawling-etl-phase1.md  20260108_000137_logback-configuration.md  20260108_000230_crawling-etl-phase2.md
core-backend/gradle/wrapper/: gradle-wrapper.properties
core-backend/invest-api/: README.md  build.gradle.kts
core-backend/invest-api/src/main/resources/: application-dev.yml  application-local.yml  application.yml  logback-spring.xml
core-backend/invest-batch/: README.md  build.gradle.kts
core-backend/invest-batch/src/main/resources/: application-dev.yml  application-local.yml  application.yml  (+1 more)
core-backend/invest-domain/: README.md  build.gradle.kts
core-backend/invest-external/: README.md  build.gradle.kts
core-backend/invest-manager/: build.gradle.kts
core-backend/module-shared/: README.md  build.gradle.kts
invest_mobile_app/: README.md  pubspec.yaml
invest_mobile_app/android/app/: build.gradle.kts
invest_mobile_app/docs/adr/: README.md
invest_mobile_app/ios/Runner/: Info.plist
invest_mobile_app/ios/Runner.xcodeproj/: project.pbxproj
invest_mobile_app/lib/: main.dart
invest_mobile_app/lib/core/constants/: app_constants.dart
invest_mobile_app/lib/core/error/: failures.dart
invest_mobile_app/lib/core/theme/: app_theme.dart
invest_mobile_app/lib/core/utils/: logger.dart
invest_mobile_app/lib/features/example_auth/: README.md
invest_mobile_app/macos/Runner.xcodeproj/: project.pbxproj
invest_mobile_app/macos/Runner/Configs/: AppInfo.xcconfig
invest_mobile_app/test/: widget_test.dart
invest_mobile_app/web/: index.html  manifest.json
web-client/: README.md  next.config.ts  package-lock.json  package.json
web-client/.claude/: CLAUDE.md
web-client/.claude/docs/changes/: 20260108_tailadmin-integration.md  20260111_svg-import-fix.md
web-client/.claude/plans/: 20260108_175500_tailadmin-template-integration.md  20260111_000000_svg-import-fix.md
web-client/app/: layout.tsx
web-client/app/dashboard/: layout.tsx  page.tsx
web-client/src/components/Header/: AppHeader.tsx
web-client/src/components/Sidebar/: AppSidebar.tsx
web-client/src/features/investment/: README.md
web-client/src/features/portfolio/: README.md
web-client/src/features/trading/: README.md
(+33 files in other folders)
